Add /delay route
